All trails page modified

--- a/MountainTrailsSystem/Views/Trail/All.cshtml
+++ b/MountainTrailsSystem/Views/Trail/All.cshtml
@@ -15,8 +15,7 @@
         previousPage = 1;
     }
 
-    var maxPage = Math.Ceiling((double)Model.TotalTrails /
-        Model.TrailsPerPage);
+    var maxPage = Math.Ceiling((double)Model.TotalTrails / 3);
 }
 
 <div class="row mb-5">
