--- a/MountainTrailsSystem/wwwroot/css/site.css
+++ b/MountainTrailsSystem/wwwroot/css/site.css
@@ -16,3 +16,27 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.dropdown-wrapper {
+    position: relative;
+}
+
+.pointer {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid #000;
+}
+
+.small.text-danger {
+    display: none;
+}
+
+.form-control:focus + .small.text-danger {
+    display: inline-block;
+}
