--- a/MountainTrailsSystem/Views/Trail/All.cshtml
+++ b/MountainTrailsSystem/Views/Trail/All.cshtml
@@ -15,30 +15,8 @@
         previousPage = 1;
     }
 
-    var maxPage = Math.Ceiling((double)Model.TotalTrails / 3);
+    var totalPages = Math.Ceiling((double)Model.TotalTrails / 3);
 }
-
-<div class="row mb-5">
-    <div class="col-md-6 d-grid gap-2 d-md-flex justify-content-md-start">
-        <a class="btn btn-primary @(Model.CurrentPage == 1 ? "disabled" : string.Empty)"
-           asp-controller="Trail"
-           asp-action="All"
-           asp-route-currentPage="@previousPage"><<</a>
-    </div>
-
-     @{
-        var shouldButtonBeDisabled = Model.CurrentPage == maxPage ||
-        !Model.Trails.Any();
-    }
-
-    <div class="col-md-6 d-grid gap-2 d-md-flex justify-content-md-end">
-        <a class="btn btn-primary
-           @(shouldButtonBeDisabled ? "disabled" : string.Empty)"
-           asp-controller="Trail"
-           asp-action="All"
-           asp-route-currentPage="@(Model.CurrentPage + 1)">>></a>
-    </div>
-</div>
 
 <div class="row">
     @foreach (var trail in Model.Trails)
@@ -46,3 +24,17 @@
         <partial name="_TrailPartial" model="@trail" />
     }
 </div>
+
+<nav aria-label="Page navigation">
+    <ul class="pagination justify-content-center">
+        <li class="page-item @(Model.CurrentPage == 1 ? "disabled" : "")">
+            <a class="page-link" href="?currentPage=@(Model.CurrentPage - 1)">Previous</a>
+        </li>
+        <li class="page-item">
+            <span class="page-link">@Model.CurrentPage</span>
+        </li>
+        <li class="page-item @(Model.CurrentPage == @totalPages ? "disabled" : "")">
+            <a class="page-link" href="?currentPage=@(Model.CurrentPage + 1)">Next</a>
+        </li>
+    </ul>
+</nav>
