--- a/MountainTrailsSystem/Views/Home/Index.cshtml
+++ b/MountainTrailsSystem/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@using MountainTrailsSystem.Core.Contracts
 @using MountainTrailsSystem.Core.Models
+@using MountainTrailsSystem.Core.Extensions;
 @model IEnumerable<TrailOverviewServiceModel>
 @inject IStatusNoteService statusNoteService;
 
@@ -35,7 +36,7 @@ else if (User.IsInRole("Administrator") && !await statusNoteService.IsStatusNote
             <h6>Difficulty level: <b>@trail.DifficultyLevel</b></h6>
             <br />
             <a asp-area="" asp-controller="Trail" asp-action="Details" asp-route-id="@trail.TrailId"
-               asp-route-information="" class="btn btn-success">Details</a>
+               asp-route-information="@trail.GetTrailDetails()" class="btn btn-success">Details</a>
         </div>
     </div>
 </div>
@@ -63,7 +64,7 @@ else
             <h6>Difficulty level: <b>@trail.DifficultyLevel</b></h6>
             <br />
             <a asp-area="" asp-controller="Trail" asp-action="Details" asp-route-id="@trail.TrailId"
-               asp-route-information="" class="btn btn-success">Details</a>
+               asp-route-information="@trail.GetTrailDetails()" class="btn btn-success">Details</a>
         </div>
     </div>
 </div>
