--- a/MountainTrailsSystem/Views/Shared/_TrailPartial.cshtml
+++ b/MountainTrailsSystem/Views/Shared/_TrailPartial.cshtml
@@ -1,4 +1,5 @@
 ﻿@using MountainTrailsSystem.Core.Models
+@using MountainTrailsSystem.Core.Extensions
 @model TrailOverviewServiceModel
 
 <div class="col-md-4">
@@ -10,7 +11,7 @@
             <h6>Difficulty level: <b>@Model.DifficultyLevel</b></h6>
             <br />
             <a asp-area="" asp-controller="Trail" asp-action="Details" asp-route-id="@Model.TrailId"
-               asp-route-information="" class="btn btn-success">Details</a>
+               asp-route-information="@Model.GetTrailDetails()" class="btn btn-success">Details</a>
         </div>
     </div>
 </div>
