Models separated by folder and namespaces adjusted accordingly

--- a/MountainTrailsSystem/Areas/Admin/Views/Mountain/Create.cshtml
+++ b/MountainTrailsSystem/Areas/Admin/Views/Mountain/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@using MountainTrailsSystem.Core.Models
+﻿@using MountainTrailsSystem.Core.Models.Mountain
 @model CreateMountainFormModel
 
 <div class="row">
