--- a/MountainTrailsSystem/Areas/Admin/Views/Region/Create.cshtml
+++ b/MountainTrailsSystem/Areas/Admin/Views/Region/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@using MountainTrailsSystem.Core.Models
+﻿@using MountainTrailsSystem.Core.Models.Region
 @model CreateRegionFormModel
 
 <div class="row">
