--- a/MountainTrailsSystem/Areas/Admin/Views/StatusNote/All.cshtml
+++ b/MountainTrailsSystem/Areas/Admin/Views/StatusNote/All.cshtml
@@ -1,5 +1,5 @@
 ﻿@using MountainTrailsSystem.Core.Contracts
-@using MountainTrailsSystem.Core.Models
+@using MountainTrailsSystem.Core.Models.StatusNote
 @model IEnumerable<TrailStatusNoteOverviewServiceModel>
 @inject IStatusNoteService statusNoteService;
 
