--- a/MountainTrailsSystem/Views/Home/Index.cshtml
+++ b/MountainTrailsSystem/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using MountainTrailsSystem.Core.Contracts
-@using MountainTrailsSystem.Core.Models
+@using MountainTrailsSystem.Core.Models.Trail;
 @using MountainTrailsSystem.Core.Extensions;
 @model IEnumerable<TrailOverviewServiceModel>
 @inject IStatusNoteService statusNoteService;
