--- a/MountainTrailsSystem/Views/Trail/Details.cshtml
+++ b/MountainTrailsSystem/Views/Trail/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@using MountainTrailsSystem.Core.Contracts
-@using MountainTrailsSystem.Core.Models
+@using MountainTrailsSystem.Core.Models.Trail
 @using Microsoft.AspNetCore.Identity
 @using MountainTrailsSystem.Infrastructure.Data.Models
 @using System.Security.Claims
