--- a/MountainTrailsSystem/Areas/Admin/Views/Peak/Create.cshtml
+++ b/MountainTrailsSystem/Areas/Admin/Views/Peak/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@using MountainTrailsSystem.Core.Models
+﻿@using MountainTrailsSystem.Core.Models.Peak
 @model CreatePeakFormModel
 
 <div class="row">
