--- a/MountainTrailsSystem/Areas/Admin/Views/StatusNote/Details.cshtml
+++ b/MountainTrailsSystem/Areas/Admin/Views/StatusNote/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@using MountainTrailsSystem.Core.Models
+﻿@using MountainTrailsSystem.Core.Models.StatusNote
 @model StatusNoteDetailsViewModel
 
 @{
