--- a/MountainTrailsSystem/Views/Peak/AllTrails.cshtml
+++ b/MountainTrailsSystem/Views/Peak/AllTrails.cshtml
@@ -1,5 +1,5 @@
 ﻿@using MountainTrailsSystem.Core.Enumerations
-@using MountainTrailsSystem.Core.Models
+@using MountainTrailsSystem.Core.Models.Peak
 @using MountainTrailsSystem.Core.Extensions
 @model IEnumerable<TrailByPeakServiceModel>
 
