--- a/MountainTrailsSystem/Views/Peak/Find.cshtml
+++ b/MountainTrailsSystem/Views/Peak/Find.cshtml
@@ -1,4 +1,4 @@
-﻿@using MountainTrailsSystem.Core.Models
+﻿@using MountainTrailsSystem.Core.Models.Peak
 @model PeakSearchConditionFormModel
 
 <h2>Find peak</h2>
