--- a/MountainTrailsSystem/Views/Shared/_PeakPartial.cshtml
+++ b/MountainTrailsSystem/Views/Shared/_PeakPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@using MountainTrailsSystem.Core.Models
+﻿@using MountainTrailsSystem.Core.Models.Peak
 @using MountainTrailsSystem.Core.Extensions
 @model PeakOverviewServiceModel
 
