Global usings added and views adjusted accordingly

--- a/MountainTrailsSystem/Areas/Admin/Views/Peak/Create.cshtml
+++ b/MountainTrailsSystem/Areas/Admin/Views/Peak/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@using MountainTrailsSystem.Core.Models.Peak
-@model CreatePeakFormModel
+﻿@model CreatePeakFormModel
 
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
