--- a/MountainTrailsSystem/Areas/Admin/Views/StatusNote/Details.cshtml
+++ b/MountainTrailsSystem/Areas/Admin/Views/StatusNote/Details.cshtml
@@ -1,5 +1,4 @@
-﻿@using MountainTrailsSystem.Core.Models.StatusNote
-@model StatusNoteDetailsViewModel
+﻿@model StatusNoteDetailsViewModel
 
 @{
     ViewBag.Title = $"{Model.Title} reported for {Model.Trail} trail";
