--- a/MountainTrailsSystem/Areas/Admin/Views/Trail/Update.cshtml
+++ b/MountainTrailsSystem/Areas/Admin/Views/Trail/Update.cshtml
@@ -1,6 +1,4 @@
-﻿@using MountainTrailsSystem.Core.Models.Trail
-@using MountainTrailsSystem.Infrastructure.Enumerations
-@model TrailUpdateFormModel
+﻿@model TrailUpdateFormModel
 @{
     ViewBag.Title = $"Update {@Model.Name} trail";
 }
