--- a/MountainTrailsSystem/Areas/Admin/Views/_ViewImports.cshtml
+++ b/MountainTrailsSystem/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,2 +1,10 @@
-﻿@using MountainTrailsSystem
+﻿@using MountainTrailsSystem;
+@using MountainTrailsSystem.Core.Contracts;
+@using MountainTrailsSystem.Core.Models.Mountain;
+@using MountainTrailsSystem.Core.Models.Peak;
+@using MountainTrailsSystem.Core.Models.Region;
+@using MountainTrailsSystem.Core.Models.StatusNote;
+@using MountainTrailsSystem.Core.Models.Trail;
+@using MountainTrailsSystem.Infrastructure.Enumerations;
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
