--- a/MountainTrailsSystem/Views/Peak/AllTrails.cshtml
+++ b/MountainTrailsSystem/Views/Peak/AllTrails.cshtml
@@ -1,7 +1,4 @@
-﻿@using MountainTrailsSystem.Core.Enumerations
-@using MountainTrailsSystem.Core.Models.Peak
-@using MountainTrailsSystem.Core.Extensions
-@model IEnumerable<TrailByPeakServiceModel>
+﻿@model IEnumerable<TrailByPeakServiceModel>
 
 <hr />
 
