--- a/MountainTrailsSystem/Views/Peak/Found.cshtml
+++ b/MountainTrailsSystem/Views/Peak/Found.cshtml
@@ -1,6 +1,4 @@
-﻿@using MountainTrailsSystem.Core.Models.Peak
-@using MountainTrailsSystem.Core.Extensions
-@model IEnumerable<PeakOverviewServiceModel>
+﻿@model IEnumerable<PeakOverviewServiceModel>
 
 @if (Model.Count() == 0)
 {
