--- a/MountainTrailsSystem/Views/Trail/All.cshtml
+++ b/MountainTrailsSystem/Views/Trail/All.cshtml
@@ -1,5 +1,4 @@
-﻿@using MountainTrailsSystem.Core.Models.Trail
-@model AllTrailsQueryModel
+﻿@model AllTrailsQueryModel
 
 @{
     ViewBag.Title = "All Trails";
