--- a/MountainTrailsSystem/Views/Trail/Details.cshtml
+++ b/MountainTrailsSystem/Views/Trail/Details.cshtml
@@ -1,9 +1,4 @@
-﻿@using MountainTrailsSystem.Core.Contracts
-@using MountainTrailsSystem.Core.Models.Trail
-@using Microsoft.AspNetCore.Identity
-@using MountainTrailsSystem.Infrastructure.Data.Models
-@using System.Security.Claims
-@model TrailDetailsViewModel
+﻿@model TrailDetailsViewModel
 @inject ITrailService trailService
 @inject UserManager<ApplicationUser> userManager
 
