--- a/MountainTrailsSystem/Views/Trail/Find.cshtml
+++ b/MountainTrailsSystem/Views/Trail/Find.cshtml
@@ -1,6 +1,4 @@
-﻿@using MountainTrailsSystem.Core.Models.Trail
-@using MountainTrailsSystem.Infrastructure.Enumerations
-@model TrailSearchFormModel
+﻿@model TrailSearchFormModel
 
 <form asp-action="Search" asp-controller="Trail" method="get">
     <div class="form-group">
