--- a/MountainTrailsSystem/Views/Trail/Visited.cshtml
+++ b/MountainTrailsSystem/Views/Trail/Visited.cshtml
@@ -1,6 +1,4 @@
-﻿@using MountainTrailsSystem.Core.Models.Trail
-@using MountainTrailsSystem.Core.Extensions
-@model IEnumerable<TrailOverviewServiceModel>
+﻿@model IEnumerable<TrailOverviewServiceModel>
 
 @{
     ViewBag.Title = "My visited trails";
