--- a/MountainTrailsSystem/Areas/Admin/Views/Mountain/Create.cshtml
+++ b/MountainTrailsSystem/Areas/Admin/Views/Mountain/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@using MountainTrailsSystem.Core.Models.Mountain
-@model CreateMountainFormModel
+﻿@model CreateMountainFormModel
 
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
