--- a/MountainTrailsSystem/Areas/Admin/Views/Trail/Create.cshtml
+++ b/MountainTrailsSystem/Areas/Admin/Views/Trail/Create.cshtml
@@ -1,6 +1,4 @@
-﻿@using MountainTrailsSystem.Core.Models.Trail
-@using MountainTrailsSystem.Infrastructure.Enumerations
-@model CreateTrailFormModel
+﻿@model CreateTrailFormModel
 
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
