--- a/MountainTrailsSystem/Views/Home/Index.cshtml
+++ b/MountainTrailsSystem/Views/Home/Index.cshtml
@@ -1,7 +1,4 @@
-﻿@using MountainTrailsSystem.Core.Contracts
-@using MountainTrailsSystem.Core.Models.Trail;
-@using MountainTrailsSystem.Core.Extensions;
-@model IEnumerable<TrailOverviewServiceModel>
+﻿@model IEnumerable<TrailOverviewServiceModel>
 @inject IStatusNoteService statusNoteService;
 
 @if (User.IsInRole("Administrator") && await statusNoteService.IsStatusNotesNotResolvedAsync())
