--- a/MountainTrailsSystem/Views/Peak/All.cshtml
+++ b/MountainTrailsSystem/Views/Peak/All.cshtml
@@ -1,5 +1,4 @@
-﻿@using MountainTrailsSystem.Core.Models.Peak
-@model AllPeaksQueryModel
+﻿@model AllPeaksQueryModel
 
 @{
     ViewBag.Title = "All Peaks";
