--- a/MountainTrailsSystem/Views/Peak/Details.cshtml
+++ b/MountainTrailsSystem/Views/Peak/Details.cshtml
@@ -1,5 +1,4 @@
-﻿@using MountainTrailsSystem.Core.Models.Peak
-@model PeakDetailsViewModel
+﻿@model PeakDetailsViewModel
 
 @{
     ViewBag.Title = $"{@Model.Name}";
