--- a/MountainTrailsSystem/Views/Peak/Find.cshtml
+++ b/MountainTrailsSystem/Views/Peak/Find.cshtml
@@ -1,5 +1,4 @@
-﻿@using MountainTrailsSystem.Core.Models.Peak
-@model PeakSearchConditionFormModel
+﻿@model PeakSearchConditionFormModel
 
 <h2>Find peak</h2>
 <hr />
