--- a/MountainTrailsSystem/Views/Shared/_LoginPartial.cshtml
+++ b/MountainTrailsSystem/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,4 @@
-﻿@using Microsoft.AspNetCore.Identity
-@using MountainTrailsSystem.Infrastructure.Data.Models
-@inject SignInManager<ApplicationUser> SignInManager
+﻿@inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
 <ul class="navbar-nav">
