--- a/MountainTrailsSystem/Views/Shared/_PeakPartial.cshtml
+++ b/MountainTrailsSystem/Views/Shared/_PeakPartial.cshtml
@@ -1,6 +1,4 @@
-﻿@using MountainTrailsSystem.Core.Models.Peak
-@using MountainTrailsSystem.Core.Extensions
-@model PeakOverviewServiceModel
+﻿@model PeakOverviewServiceModel
 
 <div class="col-md-4">
     <div class="card mb-3">
