--- a/MountainTrailsSystem/Views/Shared/_TrailPartial.cshtml
+++ b/MountainTrailsSystem/Views/Shared/_TrailPartial.cshtml
@@ -1,6 +1,4 @@
-﻿@using MountainTrailsSystem.Core.Models.Trail
-@using MountainTrailsSystem.Core.Extensions
-@model TrailOverviewServiceModel
+﻿@model TrailOverviewServiceModel
 
 <div class="col-md-4">
     <div class="card mb-3">
