--- a/MountainTrailsSystem/Views/StatusNote/Report.cshtml
+++ b/MountainTrailsSystem/Views/StatusNote/Report.cshtml
@@ -1,5 +1,4 @@
-﻿@using MountainTrailsSystem.Core.Models.StatusNote
-@model TrailStatusNoteViewModel
+﻿@model TrailStatusNoteViewModel
 
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
