--- a/MountainTrailsSystem/Views/Trail/Search.cshtml
+++ b/MountainTrailsSystem/Views/Trail/Search.cshtml
@@ -1,6 +1,4 @@
-﻿@using MountainTrailsSystem.Core.Models.Trail
-@using MountainTrailsSystem.Core.Extensions
-@model IEnumerable<TrailOverviewServiceModel>
+﻿@model IEnumerable<TrailOverviewServiceModel>
 
 @if (Model.Count() == 0)
 {
