--- a/MountainTrailsSystem/Views/_ViewImports.cshtml
+++ b/MountainTrailsSystem/Views/_ViewImports.cshtml
@@ -1,3 +1,14 @@
 ﻿@using MountainTrailsSystem
 @using MountainTrailsSystem.Models
+@using MountainTrailsSystem.Core.Contracts
+@using MountainTrailsSystem.Core.Models.Trail;
+@using MountainTrailsSystem.Core.Models.Peak;
+@using MountainTrailsSystem.Core.Models.StatusNote;
+@using MountainTrailsSystem.Core.Extensions;
+@using MountainTrailsSystem.Core.Enumerations;
+@using Microsoft.AspNetCore.Identity;
+@using MountainTrailsSystem.Infrastructure.Data.Models;
+@using System.Security.Claims;
+@using MountainTrailsSystem.Infrastructure.Enumerations;
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
