Peak found and Trail search views modified

--- a/MountainTrailsSystem/Views/Peak/Found.cshtml
+++ b/MountainTrailsSystem/Views/Peak/Found.cshtml
@@ -4,7 +4,7 @@
 {
     <h2 class="text-danger">There are no peaks matching the given criteria. You can take a look at all peaks instead.</h2>
     <div>
-        <p class="text-center" style="margin-top=20px"><a class="btn btn-primary" asp-area="" asp-controller="Peak" asp-action="All">All peaks</a></p>
+        <p class="text-center" style="margin-top:20px"><a class="btn btn-primary" asp-area="" asp-controller="Peak" asp-action="All">All peaks</a></p>
     </div>
     
 }
