--- a/MountainTrailsSystem/Views/Trail/Search.cshtml
+++ b/MountainTrailsSystem/Views/Trail/Search.cshtml
@@ -4,7 +4,7 @@
 {
     <h2 class="text-danger">There are no trails matching the given criteria. You can take a look at all trails instead.</h2>
     <div>
-        <p class="text-center" style="margin-top=20px"><a class="btn btn-primary" asp-area="" asp-controller="Trail" asp-action="All">All trails</a></p>
+        <p class="text-center" style="margin-top:20px"><a class="btn btn-primary" asp-area="" asp-controller="Trail" asp-action="All">All trails</a></p>
     </div>
 }
 
